[package]
name = "mi-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
clap = { version = "4.5.26", features = ["derive", "env"] }
cookie = "0.18.1"
cookie_store = "0.21.1"
dotenvy = { version = "0.15.7", features = ["clap"] }
flate2 = "1.0.35"
hmac = "0.12.1"
log = "0.4.25"
md5 = "0.7.0"
rand = "0.8.5"
rc4 = "0.1.0"
reqwest = { version = "0.12", features = ["json", "cookies", "multipart"] }
reqwest_cookie_store = "0.8.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7.1"
sha1 = "0.10"
sha2 = "0.10.8"
tempfile = "3.15.0"
thiserror = "2.0.11"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5.4", features = ["serde"] }
urlencoding = "2.1.3"
