[package]
name = "mi-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
cookie = "0.18"
cookie_store = "0.21"
dotenvy = { version = "0.15", features = ["clap"] }
flate2 = "1"
hmac = "0.12"
log = "0.4"
md5 = "0.7"
rand = "0.8"
rc4 = "0.1"
reqwest = { version = "0.12", features = ["json", "cookies", "multipart"] }
reqwest_cookie_store = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
sha1 = "0.10"
sha2 = "0.10"
tempfile = "3.15.0"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5", features = ["serde"] }
urlencoding = "2.1"
